# FluxoDB

./: .gitignore  README.md  pyproject.toml  run.py
fluxodb/: __init__.py  views.py
